[gd_scene load_steps=5 format=2]

[ext_resource path="res://gd/mg.gd" type="Script" id=1]
[ext_resource path="res://assets/towers/mg/bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/towers/mg/default/mg_spriteframes.tres" type="SpriteFrames" id=3]
[ext_resource path="res://assets/ui/upgrade_menu.tscn" type="PackedScene" id=4]

[node name="mg" type="StaticBody2D"]

input_pickable = true
collision_layer = 16
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable", "Visibility" ]
detect_radius = 300
fire_rate = 0.2
bullet = ExtResource( 2 )

[node name="visibility" type="Area2D" parent="." index="0"]

input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Pickable" ]

[node name="collision_shape" type="CollisionShape2D" parent="visibility" index="0"]

[node name="animated_sprite" type="AnimatedSprite" parent="." index="1"]

position = Vector2( -0.466205, -1.91944 )
scale = Vector2( 1.22775, 1.22669 )
frames = ExtResource( 3 )
animation = "level1"

[node name="collision_shape" type="CollisionPolygon2D" parent="." index="2"]

position = Vector2( -3.78253, 6.48434 )
build_mode = 0
polygon = PoolVector2Array( -7.63799, 16.274, -7.5421, -24.4415, 11.3706, -24.9819, 14.0724, 17.1663 )

[node name="shoot_timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="upgrade_menu" parent="." index="4" instance=ExtResource( 4 )]

visible = false
position = Vector2( 75.0003, 128.001 )


